<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Friend Locator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In!</string>
    <string name="signup">Sign Up!</string>
    <string name="email">E_mail</string>
    <string name="logout">Log Out!</string>
    <string name="history">My History</string>
    <string name="search">Search your friend..</string>
    <string name="notification">Notifications from:</string>
    <string name="friend_locator">Friend Locator</string>
    <string name="app_created">Application created by,</string>
    <string name="names">Ancy, Anju, Jesmin, Sachin</string>
    <string name="ok">Okay</string>

</resources>