<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login_page" >

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password" >

        
    </EditText>

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@+id/password"
        android:ems="10"
        android:layout_marginBottom="5dp"
        android:hint="@string/username" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/login"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/password"
        android:layout_below="@+id/password"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:background="#3299CC"
        android:clickable="true"
        android:onClick="login" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignBaseline="@+id/login"
        android:layout_alignBottom="@+id/login"
        android:layout_alignRight="@+id/password"
        android:text="@string/signup"
        android:background="#3299CC"
        android:clickable="true"
        android:onClick="signup" />

</RelativeLayout>